# scripts

./: .env.template  .gitignore  .gitmodules  .shellcheckrc  CLAUDE.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  scripts.code-workspace
.claude/agents/: design-xray.md
.claude/skills/commit/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/python/: SKILL.md
.github/workflows/: add-to-project.yml
recorder/: README.md  __init__.py  _aec_loopback_test.sh  _compress.sh  _notion_fetch.py  _notion_update.py  _record_meeting.sh  _record_note.sh  _stop.sh  audio-setup.sh  capture.py  config  lib.py  notion_push.py  preprocess.py  record.sh  session.py  stt.py  summarise.py  transcribe.py
recorder/capture/: __init__.py  cli.py  pipeline.py  state.py
recorder/notion/: __init__.py  blocks.py  client.py  fetch.py  page.py  ports.py  publish.py
recorder/tests/: test_consolidate.py  test_imports.py  test_notion_publish.py  test_session.py  test_transcribe.py
recorder/tests/fixtures/: test-monologue.csv  test-monologue.expected.txt
shared/: audio.sh  env.sh  record.sh
transcribe/: README.md  env.sh  ptt-evdev.py  ptt-setup.sh  ptt-start.sh  ptt-stop.sh  transcribe-meeting.sh  transcribe.sh  whatsapp.sh
