[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["evdev", "httpx", "python-dotenv"]

[project.scripts]
capture = "recorder.capture:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recorder"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["recorder"]
