[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "evdev",
    "httpx",
    "librosa>=0.10",
    "python-dotenv",
    "soundfile>=0.12",
    "speechmatics-batch>=0.5.0",
]

[project.scripts]
capture = "recorder.capture:main"
preprocess = "recorder.preprocess:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recorder"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["vendor", "typings"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (no stray print() calls)
    "PLC0415", # import not at top of file
    "D100",    # missing docstring in public module
    "D103",    # missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["recorder"]

[tool.pytest.ini_options]
testpaths = ["recorder/tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
